Bug 153592 - FILEOPEN DOCX: missing column breaks
Summary: FILEOPEN DOCX: missing column breaks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Paragraph Writer-Page-Break
  Show dependency treegraph
 
Reported: 2023-02-13 15:01 UTC by Justin L
Modified: 2023-02-14 14:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
form40b42RT4.docx: minimal example where two column breaks are lost (6.71 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-02-13 15:01 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2023-02-13 15:01:40 UTC
Created attachment 185346 [details]
form40b42RT4.docx: minimal example where two column breaks are lost

The problem is that when opening the file in LO, the two column breaks are lost. (Likely they are eaten up by the textboxes.) The file originated as a DOC, but when saving it to DOCX, it was noticed that the columns were lost. They are retained when round-tripping as a DOC (although deleting a few more paragraph marks can break that as well). Note that the DOCX opens fine in Word 2010, so it is an import problem, not an export problem.

Steps to reproduce.
-open the provided DOCX file.
-notice that there is no content in the second and third column. There should be one paragraph of text in each column on the first page.
Comment 1 Justin L 2023-02-13 15:21:01 UTC
This looked OK in 6.3, but broke with
commit 14087d3e5fed9b56384432d9aeac608a5e8d86cf
Author: Justin Luth on Fri Dec 21 21:22:51 2018 +0300
    tdf#121670 ooxmlimport: no columns in page styles, only sections

https://gerrit.libreoffice.org/65557

I'm not sure it really is a regression, but I'll mark it as such anyway.
Comment 2 Commit Notification 2023-02-14 02:07:26 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80f9ad23282e0d8c4ba3441797d4899b9555eee3

tdf#153592 writerfilter: don't defer breaks into shapes/comments

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.